<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Form for To-Do Entry -->
    <EditText
        android:id="@+id/text_goal_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/goal_label_placeholder"
        android:inputType="text" />

    <EditText
        android:id="@+id/text_goal_deadline_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deadline_date_placeholder"
        android:inputType="date"
        android:focusable="false" />

    <EditText
        android:id="@+id/text_goal_deadline_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deadline_time_placeholder"
        android:inputType="time"
        android:focusable="false" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goal_type_label" />

    <Spinner
        android:id="@+id/spinner_goal_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/text_goal_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/goal_value_placeholder"
        android:inputType="number" />

    <!-- Separator Line -->
    <Button
        android:id="@+id/button_create_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_goal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <!-- RecyclerView for To-Do Items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/goalsRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="?attr/actionBarSize"
        android:scrollbars="vertical"/>
</LinearLayout>
